# ksbonjson

./: .gitignore  .gitmodules  LICENSE.md  README.md
benchmark/: README.md  benchmark.sh  meson.build
benchmark/src/: main.c
executable/: README.md  example.bonjson  example.json  meson.build
executable/src/: main.c
executable/subprojects/: json-c
